--- a/Music2Web.de/Music2Web.Navigation/NavigationView.xaml
+++ b/Music2Web.de/Music2Web.Navigation/NavigationView.xaml
@@ -2,7 +2,9 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:navigationDrawer="clr-namespace:Syncfusion.Maui.Toolkit.NavigationDrawer;assembly=Syncfusion.Maui.Toolkit"
+             xmlns:viewModel="clr-namespace:Music2Web.Navigation"
              x:Class="Music2Web.Navigation.NavigationView"
+             x:DataType="viewModel:INavigationViewModel"
              Title="NavigationView">
     <navigationDrawer:SfNavigationDrawer x:Name="navigationDrawer">
         <navigationDrawer:SfNavigationDrawer.ContentView>
@@ -17,7 +19,7 @@
                             FontSize="30"
                             TextColor="#ffffff"
                             BackgroundColor="#e00000"
-                            Clicked="hamburgerButton_Clicked" />
+                            Command="{Binding ToggleDrawerCommand}" />
                 </HorizontalStackLayout>
                 <Label Grid.Row="1"
                        x:Name="contentLabel"
